chore(README.md): update README with additional deployment and build commands style(main.css): add padding to list items in blog page for better readability style(NavBar.vue): add overflow-x-hidden to prevent horizontal scrolling on mobile menu refactor(index.ts): refactor contact_form and subscribe_to_newsletters functions for better readability and error handling style([...slug].vue): add overflow-hidden class to main element for better content visibility

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,11 +136,11 @@
     }
 
     .blog-page ol li {
-        @apply my-2 list-decimal list-outside relative left-4;
+        @apply my-2 list-decimal list-outside relative left-4 pr-4;
     }
 
     .blog-page ul li {
-        @apply my-2 list-decimal list-outside relative left-4;
+        @apply my-2 list-decimal list-outside relative left-4 pr-4;
     }
 
     .blog-page li code {
